dilang-interpreter/test/cases/errors/arity_mismatch.di
fn add(a: I64, b: I64) -> I64 { a + b }

fn main() {
    print(add(1))
}
